добавил поле board_id в поле вывода поиска
